--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
 </style>
 <body>
-    
+    <a href="https://github.com/TRIPLE-ADE/Zuri-javascript-basic-details">Github repo</a>
     <script src="index.js"></script>
 </body>
 </html>
