--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
         color: blue;
         line-height: 30px;
     }
+    a{ color:white;
+        font-size:14px;
+    }
 </style>
 <body>
-    <a href="https://github.com/TRIPLE-ADE/Zuri-javascript-basic-details">Github repo</a>
+    <a href="https://github.com/TRIPLE-ADE/Zuri-javascript-basic-details">Github repo</a> <br>
     <script src="index.js"></script>
 </body>
 </html>
