--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         color: blue;
         line-height: 30px;
     }
-    a{ color:white;
+    a{ color:black;
         font-size:14px;
     }
 </style>
 <body>
-    <a href="https://github.com/TRIPLE-ADE/Zuri-javascript-basic-details">Github repo</a> <br>
+    Click <a href="https://github.com/TRIPLE-ADE/Zuri-javascript-basic-details">here</a> to see github repo<br>
     <script src="index.js"></script>
 </body>
 </html>
