--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         color: blue;
         line-height: 30px;
     }
-    p, a{ color:black;
+    a{ color:black;
+        font-size:14px;
+    }
+    p{ color:black;
         font-size:14px;
     }
 </style>
