--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
 </style>
 <body>
-    <p>  Click <a href="https://github.com/TRIPLE-ADE/Zuri-javascript-basic-details">here</a> to see github repo </p><br>
+    <p>  Click <a href="https://github.com/TRIPLE-ADE/Zuri-javascript-basic-details">here</a> to see github repo </p>
     <script src="index.js"></script>
 </body>
 </html>
